--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
@@ -4,7 +4,8 @@
     <title>CSS Test: One named flow with muticolumn layout, text content + 
                      multiple regions + overflowing region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
-    <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
+    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
+    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-013-ref.html"/>
     <meta name="flags" content="ahem"/>
