--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-020.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-020.html
@@ -5,7 +5,8 @@
                      specified width, non-text content + multiple 
                      overlapping regions</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
-    <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
+    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
+    <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-019-ref.html"/>
     <meta name="assert" content="This test checks multiple named flows with non-text
