--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-016.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-016.html
@@ -4,9 +4,10 @@
 <title>CSS Test: One named flow with multicolumn layout + monolithic 
                  content + multiple regions</title>
 <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
-<link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
+<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
+<link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
 <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
-    <link rel="match" href="reference/regions-multicol-016-ref.html"/>
+<link rel="match" href="reference/regions-multicol-016-ref.html"/>
     <meta name="assert" content="This test checks that monolithic content 
                                  flows through multiple regions keeping 
                                  the multicolumn layout that is applied to the 
