change wording of assertion per alan's suggestion

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
@@ -10,11 +10,11 @@
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-008-ref.html"/>
-    <meta name="assert" content="This test checks that the named flow non-text
-                                 fragmentable content flows through multicolumn 
-                                 layout that is applied to the first region in 
-                                 the region chain, then through the second 
-                                 region in the chain."/>
+    <meta name="assert" content="This test checks that non-text named flow content is 
+                                 fragmented first through the columns in a multicolumn 
+                                 region, then through a second region."/>
+                                 
+                                 
     <style type="text/css">
         #named-flow {
             -webkit-flow-into: multicol;
