--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-013.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-013.html
@@ -11,7 +11,7 @@
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test checks that the named flow text
                                  content flows through the regions in the
-                                 in the multicolumn layout that is applied to 
+                                 multicolumn layout that is applied to 
                                  the regions' parent and that it overflows 
                                  visibly into a fourth column."/>
     <style type="text/css">
