--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CSS Test: One named flow with muticolumn layout, text content + 
-                     multiple regions + overflowing region</title>
+                     multiple regions with content overflowing last region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
