add height to region-2 so its actually testing overflow

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
@@ -36,6 +36,7 @@
         }
         #region-2 {
             left: 140px;
+            height: 100px;
         }
         .failure {
             position: absolute;
