Properly properly re-title NCR tests. r=zcorpan

--- a/conformance-checkers/html/parser/006-novalid.html
+++ b/conformance-checkers/html/parser/006-novalid.html
@@ -1,1 +1,1 @@
-<!doctype html><meta charset=utf-8><title>U+007F</title><p>There should be an error.&#x007F;
+<!doctype html><meta charset=utf-8><title>&amp;#x007F;</title><p>There should be an error.&#x007F;
