--- a/conformance-checkers/html/parser/005-novalid.html
+++ b/conformance-checkers/html/parser/005-novalid.html
@@ -1,1 +1,1 @@
-<!doctype html><meta charset=utf-8><title>U+FFFE</title><p>There should be an error.&#xFFFE;
+<!doctype html><meta charset=utf-8><title>&amp;#xFFFE;</title><p>There should be an error.&#xFFFE;
