--- a/conformance-checkers/html/parser/007-novalid.html
+++ b/conformance-checkers/html/parser/007-novalid.html
@@ -1,1 +1,1 @@
-<!doctype html><meta charset=utf-8><title>U+10FFFF</title><p>There should be an error.&#x10FFFF;
+<!doctype html><meta charset=utf-8><title>&amp;#x10FFFF;</title><p>There should be an error.&#x10FFFF;
