--- a/conformance-checkers/html/parser/008-novalid.html
+++ b/conformance-checkers/html/parser/008-novalid.html
@@ -1,1 +1,1 @@
-<!doctype html><meta charset=utf-8><title>U+110000</title><p>There should be an error.&#x110000;
+<!doctype html><meta charset=utf-8><title>&amp;#x110000;</title><p>There should be an error.&#x110000;
