changed white to gray to assure rendering is really correct

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
@@ -35,7 +35,7 @@
         }
         .white {
             -webkit-flow-into: multicol-2;
-            color: white;
+            color: gray;
         }
         
         #region-1, #region-3, #region-6, #region-8, 
@@ -61,7 +61,7 @@
 	</style>
 </head>
 <body>
-    <p>The test passes if there is a 4x4 black and white checkerboard and no red.</p> 
+    <p>The test passes if there is a 4x4 black and gray checkerboard and no red.</p> 
     <div class="named-flow black">
         XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX
     </div>
