--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-018.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-018.html
@@ -34,7 +34,7 @@
         }
         .white {
             -webkit-flow-into: multicol-2;
-            background-color: white;
+            background-color: gray;
         }
 
         #region-1, #region-3, #region-6, #region-8, 
@@ -60,7 +60,7 @@
 	</style>
 </head>
 <body>
-    <p>The test passes if there is a 4x4 black and white checkerboard and no red.</p> 
+    <p>The test passes if there is a 4x4 black and gray checkerboard and no red.</p> 
     <div class="named-flow black"></div>
     <div class="named-flow white"></div>
     <div id="multicol-container">
