--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
@@ -29,25 +29,26 @@
             font-size: 25px;
             line-height: 1em;
         }
+        .region {
+            height: 50px;
+        }
         .black {
-            -webkit-flow-into: multicol-1;
             color: black;
         }
-        .white {
-            -webkit-flow-into: multicol-2;
+        .gray {
             color: gray;
         }
-        
-        #region-1, #region-3, #region-6, #region-8, 
-        #region-9, #region-11, #region-14, #region-16 {
-            height: 50px;
-            -webkit-flow-from: multicol-1;
+        .region.black {
+          -webkit-flow-from: multicol-1;
         }
-        
-        #region-2, #region-4, #region-5, #region-7, 
-        #region-10, #region-12, #region-13, #region-15{
-            height: 50px;
-            -webkit-flow-from: multicol-2;
+        .named-flow.black {
+          -webkit-flow-into: multicol-1;
+        }
+        .region.gray{
+          -webkit-flow-from: multicol-2;
+        }
+        .named-flow.gray {
+          -webkit-flow-into: multicol-2;
         }
         #failure {
             position: absolute;
@@ -65,26 +66,26 @@
     <div class="named-flow black">
         XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX
     </div>
-    <div class="named-flow white">
+    <div class="named-flow gray">
         XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX
     </div>
     <div id="multicol-container">
-        <div id="region-1"></div>
-        <div id="region-2"></div>
-        <div id="region-3"></div>
-        <div id="region-4"></div>
-        <div id="region-5"></div>
-        <div id="region-6"></div>
-        <div id="region-7"></div>
-        <div id="region-8"></div>
-        <div id="region-9"></div>
-        <div id="region-10"></div>
-        <div id="region-11"></div>
-        <div id="region-12"></div>
-        <div id="region-13"></div>
-        <div id="region-14"></div>
-        <div id="region-15"></div>
-        <div id="region-16"></div>
+        <div class="region black"></div>
+        <div class="region gray"></div>
+        <div class="region black"></div>
+        <div class="region gray"></div>
+        <div class="region gray"></div>
+        <div class="region black"></div>
+        <div class="region gray"></div>
+        <div class="region black"></div>
+        <div class="region black"></div>
+        <div class="region gray"></div>
+        <div class="region black"></div>
+        <div class="region gray"></div>
+        <div class="region gray"></div>
+        <div class="region black"></div>
+        <div class="region gray"></div>
+        <div class="region black"></div>
     </div>
     <div id="failure"></div>
 </body>
