changed self describing text per mihai's feedback

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-019.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-019.html
@@ -54,8 +54,8 @@
 	</style>
 </head>
 <body>
-    <p>The test passes if there is a square with green and blue vertical
-        stripes and no red.</p> 
+    <p>The test passes if there is a square with four vertical
+       stripes alternating green and blue, and no red.</p> 
     <div class="green named-flow-multicol">
         XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX XX
     </div>
