--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-020.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-020.html
@@ -60,8 +60,8 @@
 	</style>
 </head>
 <body>
-    <p>The test passes if there is a square with green and blue vertical
-        stripes and no red.</p> 
+    <p>The test passes if there is a square with four vertical
+       stripes alternating green and blue, and no red.</p> 
     <div class="named-flow-multicol" id="named-flow-1">
         <div class="green bar"></div>
         <div class="green bar"></div>
