--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-001.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-001.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, text content + one region spanning 
-                     multiple columns</title>
+    <title>CSS Test: One named flow, text content + one region fragmented 
+                     across multiple columns</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
