moved 002 out of regions suite per mihai's suggestion & refactored again

--- a/contributors/adobe/incoming/fragmentation/regions-multicol-002.html
+++ b/contributors/adobe/incoming/fragmentation/regions-multicol-002.html
@@ -1,3 +1,14 @@
+<!-- 
+    RebeccaH: 10/3/2013:
+    This test was originally part of the Regions + Multicolumn suite
+    but was deemed not useful in the context of regions, possibly
+    better for fragmentation. Stashing it here to be revisited later
+    if we want to submit it for that spec 
+    
+    See:
+    https://github.com/rhauck/csswg-test/commit/94d7d1a73297ccb1d71314725ac9e556f9c62ca3#commitcomment-4234764
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
