rephrased title with mihai's suggestion

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-006.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-006.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, text content + multicolumn region element 
-                     flowing into another element in the region chain</title>
+    <title>CSS Test: One named flow, text content - fragmented between 
+                     multicol region and non-multicol region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
