--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
@@ -9,11 +9,9 @@
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-009-ref.html"/>
-    <meta name="assert" content="This test checks that the named flow text
-                                 content flows through the first region in the 
-                                 region chain then through the multicolumn 
-                                 layout that is applied to the second region 
-                                 in the chain."/>
+    <meta name="assert" content="This test checks that text named flow 
+                                 content is fragmented first through a simple region, 
+                                 then through a multicolumn region"/>
     <style type="text/css">
         #named-flow {
             font-family: Ahem;
