--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-010.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-010.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, monolithic content + first element in 
-                     region chain flowing into a multicolumn region element</title>
+    <title>CSS Test: One named flow, monolithic content flows through a 
+                     simple region, then through a multicolumn region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
