rephrased assertion per mihai's comment

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-011.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-011.html
@@ -10,11 +10,9 @@
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-009-ref.html"/>
-    <meta name="assert" content="This test checks that the named flow non-text
-                                 fragmentable content flows through the first 
-                                 region in the region chain then through the 
-                                 multicolumn layout that is applied to the 
-                                 second region in the chain."/>
+    <meta name="assert" content="This test checks that non-text fragmentable named 
+                                 flow content is fragmented through a simple region, then 
+                                 through a multicolumn region."/>
     <style type="text/css">
         #named-flow {
             width: 100px;
