--- a/html/dom/interfaces.html
+++ b/html/dom/interfaces.html
@@ -4,7 +4,7 @@
 <div id=log></div>
 <script src=/resources/testharness.js></script>
 <script src=/resources/testharnessreport.js></script>
-<script src=/resources/webidl2.js></script>
+<script src=/resources/WebIDLParser.js></script>
 <script src=/resources/idlharness.js></script>
 <!-- URL IDLs -->
 <script type=text/plain class=untested>
