removed the word 'discontiguous' since it's not important to the test

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: Multiple named flows, text content + multiple discontiguous 
+    <title>CSS Test: Multiple named flows, text content + multiple  
                      regions in a multicol layout</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
@@ -9,8 +9,8 @@
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-017-ref.html"/>
     <meta name="assert" content="This test checks multiple named flows with text
-                                 content flow into multiple discontigous regions and 
-                                 through the multicolumn layout that is applied to the 
+                                 content flow into multiple regions and  through the 
+                                 multicolumn layout that is applied to the 
                                  regions' parent."/>
     <meta name="flags" content="ahem"/>
     <style type="text/css">
