changed 'multicolumn layout' to 'multicolumn container'. also, added hyphens to multi-column to be consistent with the spec

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-003.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-003.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow with multicolumn layout, text content  
+    <title>CSS Test: One named flow multi-column container, text content  
                      overflowing one region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-003-ref.html"/>
-    <meta name="assert" content="This test checks that text content flows 
-                                 through a region maintaining the multicolumn 
-                                 layout that is applied to the named flow and that 
+    <meta name="assert" content="This test checks that text content flows through a region 
+                                 maintaining the named flow  multi-column container and that 
                                  it overflows visibly into a third column."/>
     <meta name="flags" content="ahem"/>
     <style type="text/css">
