--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, text content + one region with 
-                     multicolumn layout </title>
+    <title>CSS Test: One named flow, text content + one multi-column region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
@@ -10,9 +9,9 @@
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-003-ref.html"/>
     <meta name="flags" content="ahem"/>
-    <meta name="assert" content="This test checks that text content in a bamed flow is 
-                                 laid out using columns when flowed in a multicolumn 
-                                 region container."/>
+    <meta name="assert" content="This test checks that text content in a named flow is 
+                                 laid out using columns when flowed in a multi-column 
+                                 region."/>
     <style type="text/css">
         #named-flow {
             font-family: Ahem;
