--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, non-text fragmentable content + multicolumn 
-                     region element flowing into another element in the region 
-                     chain</title>
+    <title>CSS Test: One named flow, non-text fragmentable content + multi-column 
+                     region flowing into non-multicol region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#multi-column-regions"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-008-ref.html"/>
-    <meta name="assert" content="This test checks that non-text named flow content is 
-                                 fragmented first through the columns in a multicolumn 
-                                 region, then through a second region."/>
+    <meta name="assert" content="This test checks that non-text named flow contentmulti-column is 
+                                 fragmented first through the columns in a region multi-column 
+                                 container, then through a second non-multi-column region."/>
                                  
                                  
     <style type="text/css">
