--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-011.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-011.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, non-text fragmentable content + first 
-                     element in region chain flowing into a multicolumn 
-                     region element</title>
+    <title>CSS Test: One named flow, non-text fragmentable content + non-mulicol 
+                     region flowing into a multi-column region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
@@ -12,7 +11,7 @@
     <link rel="match" href="reference/regions-multicol-009-ref.html"/>
     <meta name="assert" content="This test checks that non-text fragmentable named 
                                  flow content is fragmented through a simple region, then 
-                                 through a multicolumn region."/>
+                                 through a multi-column region."/>
     <style type="text/css">
         #named-flow {
             width: 100px;
