--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-012.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-012.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow with multicolumn layout, monolithic content 
+    <title>CSS Test: One named flow multi-column container, monolithic content 
                      + one region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-012-ref.html"/>
-    <meta name="assert" content="This test checks that the named flow monolithic
-                                 content flows through the multicolumn layout 
-                                 that is applied to the named flow."/>
+    <meta name="assert" content="This test checks that monolithic content in a named flow
+                                 multi-column container flows through the region."/>
     <style type="text/css">
         #named-flow-multicol {
             width: 360px;
