--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-014.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-014.html
@@ -10,9 +10,8 @@
     <link rel="match" href="reference/regions-multicol-013-ref.html"/>
     <meta name="assert" content="This test checks that the named flow 
                                  monolithic content flows through the 
-                                 regions in the in the multicolumn layout 
-                                 that is applied to the regions' parent 
-                                 and that it overflows visibly into a fourth 
+                                 regions in the in the multi-column container and 
+                                 that it overflows visibly into a fourth 
                                  column."/>
     <style type="text/css">
         #named-flow {
