--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow with muticolumn layout, text content + 
+    <title>CSS Test: One named flow muticolumn container, text content + 
                      multiple regions with content overflowing last region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
@@ -9,11 +9,9 @@
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-013-ref.html"/>
     <meta name="flags" content="ahem"/>
-    <meta name="assert" content="This test checks that text content flows 
-                                 through multiple regions keeping the 
-                                 multicolumn layout that is applied to the 
-                                 named flow and that it overflows the last 
-                                 region in the region chain visibly."/>
+    <meta name="assert" content="This test checks that text content flows through multiple 
+                                 regions from the named flow multi-column container and that 
+                                 it overflows the last region in the region chain visibly."/>
     <style type="text/css">
         #named-flow-multicol {
             font-family: Ahem;
