--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-016.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-016.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSS Test: One named flow with multicolumn layout + monolithic 
+<title>CSS Test: One named flow multi-column container + monolithic 
                  content + multiple regions</title>
 <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
 <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
@@ -9,9 +9,8 @@
 <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
 <link rel="match" href="reference/regions-multicol-016-ref.html"/>
     <meta name="assert" content="This test checks that monolithic content 
-                                 flows through multiple regions keeping 
-                                 the multicolumn layout that is applied to the 
-                                 named flow and that it overflows the last 
+                                 flows through multiple regions from the named flow
+                                 multi-column container and that it overflows the last 
                                  region in the region chain visibly into
                                  a fifth column."/>
     <style type="text/css">
