--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-017.html
@@ -2,16 +2,15 @@
 <html>
 <head>
     <title>CSS Test: Multiple named flows, text content + multiple  
-                     regions in a multicol layout</title>
+                     regions in a multi-column container</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-017-ref.html"/>
     <meta name="assert" content="This test checks multiple named flows with text
-                                 content flow into multiple regions and  through the 
-                                 multicolumn layout that is applied to the 
-                                 regions' parent."/>
+                                 content flow into multiple regions in the multi-column 
+                                 container."/>
     <meta name="flags" content="ahem"/>
     <style type="text/css">
         #multicol-container {
