--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-019.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-019.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: Multiple named flows with multicolumn layout, text content +
+    <title>CSS Test: Multiple named flows multi-column containers, text content +
                      multiple overlapping regions</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
@@ -9,10 +9,8 @@
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-019-ref.html"/>
     <meta name="flags" content="ahem"/>
-    <meta name="assert" content="This test checks multiple named flows with text
-                                 content flow into multiple overlapping regions keeping
-                                 the multicolumn layout that is applied to the 
-                                 named flows."/>
+    <meta name="assert" content="This test checks multiple named flow multi-column containers
+                                 with text content flow into multiple overlapping regions."/>
     <style type="text/css">
         .named-flow-multicol {
             width: 150px;
