--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-021.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-021.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: Multiple named flows with multicolumn layout with
+    <title>CSS Test: Multiple named flows multi-column containers with
                      unspecified width, non-text content + multiple 
                      overlapping regions</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
@@ -9,11 +9,9 @@
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-019-ref.html"/>
-    <meta name="assert" content="This test checks multiple named flows with
-                                 unspecified width and non-text content flow 
-                                 into multiple overlapping regions keeping
-                                 the multicolumn layout that is applied to the 
-                                 named flows."/>
+    <meta name="assert" content="This test checks multiple named flow multi-column
+                                 containers with unspecified width and non-text content flow 
+                                 into multiple overlapping regions."/>
     <style type="text/css">
         .named-flow-multicol {
             -webkit-columns: 2;
