--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-005.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-005.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, monolithic content + one region with 
-                     multicolumn layout</title>
+    <title>CSS Test: One named flow, monolithic content + one multi-column region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
@@ -10,8 +9,7 @@
     <link rel="help" href="http://www.w3.org/TR/css3-multicol/#columns"/>
     <link rel="match" href="reference/regions-multicol-003-ref.html"/>
     <meta name="assert" content="This test checks that the named flow monolithic
-                                 content flows through the the multicolumn layout 
-                                 that is applied to the region."/>
+                                 content flows through the multi-column region."/>
     <style type="text/css">
         #named-flow {
             background-color: green;
