--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-006.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-006.html
@@ -11,10 +11,9 @@
     <link rel="match" href="reference/regions-multicol-006-ref.html"/>
     <meta name="flags" content="ahem"/>
     <meta name="assert" content="This test checks that the named flow text
-                                 content flows through multicolumn layout that 
-                                 is applied to the first region in the region 
-                                 chain then through the second region in the 
-                                 chain."/>
+                                 content flows through the multi-column region 
+                                 in the region chain then through the second 
+                                 non-multicol region in the chain."/>
     <style type="text/css">
         #named-flow {
             font-family: Ahem;
