--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CSS Test: One named flow, text content + first element in region 
-                     chain flowing into a multicolumn region element</title>
+                     chain flowing into a multi-column region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
@@ -11,7 +11,7 @@
     <link rel="match" href="reference/regions-multicol-009-ref.html"/>
     <meta name="assert" content="This test checks that text named flow 
                                  content is fragmented first through a simple region, 
-                                 then through a multicolumn region"/>
+                                 then through a multi-column region"/>
     <style type="text/css">
         #named-flow {
             font-family: Ahem;
