remove '+' in titles in favor of actual words

--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-004.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, text content + one multi-column region</title>
+    <title>CSS Test: One named flow, text content flowing into one multi-column region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
