--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-008.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, non-text fragmentable content + multi-column 
-                     region flowing into non-multicol region</title>
+    <title>CSS Test: One named flow, non-text fragmentable content flowing into multi-column 
+                     region then into non-multicol region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
