--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-009.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, text content + first element in region 
-                     chain flowing into a multi-column region</title>
+    <title>CSS Test: One named flow, text content flowing into a simple region 
+                     chain then into a multi-column region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
