--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-014.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-014.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, monolithic content + multiple regions 
-                     fragmented across multiple columns + overflowing region</title>
+    <title>CSS Test: One named flow, monolithic content flowing into multiple regions 
+                     fragmented across multiple columns and overflowing the last region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
