--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-011.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-011.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow, non-text fragmentable content + non-mulicol 
-                     region flowing into a multi-column region</title>
+    <title>CSS Test: One named flow, non-text fragmentable content flowing into non-mulicol 
+                     region then into a multi-column region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-from-property"/>
