--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-015.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CSS Test: One named flow muticolumn container, text content + 
+    <title>CSS Test: One named flow muticolumn container, text content flowing into 
                      multiple regions with content overflowing last region</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
