--- a/contributors/adobe/submitted/regions/multicolumn/regions-multicol-021.html
+++ b/contributors/adobe/submitted/regions/multicolumn/regions-multicol-021.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>CSS Test: Multiple named flows multi-column containers with
-                     unspecified width, non-text content + multiple 
+                     unspecified width, non-text content flowing into multiple 
                      overlapping regions</title>
     <link rel="author" title="Rebecca Hauck" href="mailto:rhauck@adobe.com"/>
     <link rel="help" href="http://www.w3.org/TR/css3-regions/#the-flow-into-property"/>
