--- a/XMLHttpRequest/setrequestheader-bogus-value.htm
+++ b/XMLHttpRequest/setrequestheader-bogus-value.htm
@@ -23,7 +23,7 @@
       test(function() {
         var client = new XMLHttpRequest()
         client.open("GET", "...")
-        assert_throws({name:'TypeError'}, function() { client.setRequestHeader("x-test") })
+        assert_throws(new TypeError(), function() { client.setRequestHeader("x-test") })
       })
     </script>
   </body>
