--- a/XMLHttpRequest/send-entity-body-document.htm
+++ b/XMLHttpRequest/send-entity-body-document.htm
@@ -20,13 +20,13 @@
       function request(input, number) {
         test(function() {
           var client = new XMLHttpRequest()
-          client.open("POST", "resources/content.py", false)
+          client.open("POST", "resources/content.py?response_charset_label=UTF-8", false)
           client.send(input)
           var exp = expectations[number]
           if(exp.isHTML){
-            assert_regexp_match(client.getResponseHeader('X-Request-Content-Type'), /text\/html;\s?charset=UTF-8/i, 'HTML documents should be serialized and sent as text/html '+number)
+            assert_regexp_match(client.getResponseHeader('X-Request-Content-Type'), /text\/html;\s?charset=UTF-8/i, 'HTML documents should be serialized and sent as text/html (TEST#'+number+')')
           }else{
-            assert_regexp_match(client.getResponseHeader('X-Request-Content-Type'), /application\/xml;\s?charset=UTF-8/i, 'XML documents should be serialized and sent as application/xml '+number)
+            assert_regexp_match(client.getResponseHeader('X-Request-Content-Type'), /application\/xml;\s?charset=UTF-8/i, 'XML documents should be serialized and sent as application/xml (TEST #'+number+')')
           }
           // The indexOf() assertation will overlook some stuff, i.e. XML prologues that shouldn't be there (looking at you, Presto).
           // However, arguably these things have little to do with the XHR functionality we're testing.
@@ -44,8 +44,8 @@
              with a U+FFFD replacement character for the invalid char
           * one HTML document parsed from a valid Shift-JIS source
      -->
-    <iframe src='data:text/xml;charset=windows-1252,<%FF/>' onload="init(this, 0)"></iframe>
-    <iframe src='data:text/html;charset=UTF-8,%FF' onload="init(this, 1)"></iframe>
-    <iframe src='data:text/html;charset=Shift-JIS,%83%65%83%58%83%67' onload="init(this, 2)"></iframe>
+    <iframe src='resources/win-1252-xml.php' onload="init(this, 0)"></iframe>
+    <iframe src='resources/invalid-utf8-html.php' onload="init(this, 1)"></iframe>
+    <iframe src='resources/shift-jis-html.php' onload="init(this, 2)"></iframe>
   </body>
 </html>
